--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,6 +22,10 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
+    - name: Email
+      run: git config --global user.email "lwatkins26@gunston.org"
+    - name: Name
+      run: git config --global user.name "Lucas Watkins"
     - name: Add
       run: git add bin/ -f
     - name: Commit
